--- a/dashboard/src/app/detail-incident/detail-incident.component.css
+++ b/dashboard/src/app/detail-incident/detail-incident.component.css
@@ -1,8 +1,30 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    height: calc(100vh - 104px);
-    overflow: auto;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  padding-top: 84px;
+  overflow: auto;
+
+}
+
+.property{
+  border-bottom: 1px solid lightgray;
+}
+
+.key{
+  font-style: italic;
+  border-bottom: 1px solid lightgray;
+  border-right: 1px solid gray;
+}
+
+.key-normal{
+  border-bottom: 1px solid lightgray;
+  border-right: 1px solid gray;
+}
+
+.map {
+  height: 50vh;
+  width: 40vw;
+  padding: 0;
+}
