--- a/dashboard/src/app/dispatcher/dispatcher.component.html
+++ b/dashboard/src/app/dispatcher/dispatcher.component.html
@@ -84,9 +84,9 @@
 
             <ng-container matColumnDef="status">
               <th mat-header-cell *matHeaderCellDef> Status </th>
-              <td mat-cell *matCellDef="let element"> <mat-icon *ngIf="element.assigned" class="notcheck"
+              <td mat-cell *matCellDef="let element"> <mat-icon *ngIf="element.assignedIncident" class="notcheck"
                   fontIcon="crisis_alert"></mat-icon>
-                <mat-icon *ngIf="!element.assigned" class="check" fontIcon="house"></mat-icon>
+                <mat-icon *ngIf="!element.assignedIncident" class="check" fontIcon="house"></mat-icon>
               </td>
             </ng-container>
 
@@ -111,7 +111,7 @@
               aria-label="Ressource abwählen">
               <mat-icon class="notcheck">close</mat-icon>
             </button>
-              
+
               </td>
             </ng-container>
 
