--- a/dashboard/src/app/calltaker/calltaker.component.html
+++ b/dashboard/src/app/calltaker/calltaker.component.html
@@ -15,31 +15,30 @@
     <!-- Status Column -->
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Dispatch Status </th>
-      <td mat-cell *matCellDef="let element"> 
-        <mat-icon *ngIf="element.status" class="check" fontIcon="check"></mat-icon>
-        <mat-icon *ngIf="!element.status" class="notcheck" fontIcon="close"></mat-icon>
-
-    </td>
+      <td mat-cell *matCellDef="let element">
+        <mat-icon *ngIf="element.status == 'DISPATCHED'" class="check" fontIcon="check"></mat-icon>
+        <mat-icon *ngIf="element.status != 'DISPATCHED'" class="notcheck" fontIcon="close"></mat-icon>
+      </td>
     </ng-container>
-  
+
     <!-- Location Column -->
     <ng-container matColumnDef="location" >
       <th mat-header-cell *matHeaderCellDef> Standort </th>
-      <td mat-cell *matCellDef="let element"> {{element.location}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.location.description.street}}, {{element.location.description.postalCode}} {{element.location.description.city}} </td>
     </ng-container>
-  
+
     <!-- Classification Column -->
     <ng-container matColumnDef="class">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Klassifikation </th>
-      <td mat-cell *matCellDef="let element"> {{element.class}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.categorization.code}} </td>
     </ng-container>
-  
+
     <!-- Time Column -->
-    <ng-container matColumnDef="time">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Uhrzeit </th>
-      <td mat-cell *matCellDef="let element"> {{element.time}} </td>
-    </ng-container>
-  
+<!--    <ng-container matColumnDef="time">-->
+<!--      <th mat-header-cell *matHeaderCellDef mat-sort-header> Uhrzeit </th>-->
+<!--      <td mat-cell *matCellDef="let element"> {{element.time}} </td>-->
+<!--    </ng-container>-->
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
     <tr mat-row (click)="showDetail(row)" *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
