--- a/dashboard/src/app/detail-incident/detail-incident.component.html
+++ b/dashboard/src/app/detail-incident/detail-incident.component.html
@@ -8,17 +8,19 @@
 <br>
 
 <mat-grid-list cols="5" rowHeight="50px" style="width: 50%">
+  <mat-grid-tile colspan="2" class="key">PLZ</mat-grid-tile>
+  <mat-grid-tile colspan="3" class="property">{{incident?.location?.description?.postalCode}}</mat-grid-tile>
   <mat-grid-tile colspan="2" class="key">Ort</mat-grid-tile>
-  <mat-grid-tile colspan="3" class="property">Wien</mat-grid-tile>
+  <mat-grid-tile colspan="3" class="property">{{incident?.location?.description?.city}}</mat-grid-tile>
   <mat-grid-tile colspan="2" class="key">Straße</mat-grid-tile>
-  <mat-grid-tile colspan="3" class="property">Hauptstraße 1</mat-grid-tile>
-  <mat-grid-tile colspan="2" class="key">Zusätzliche Standortinformationen</mat-grid-tile>
-  <mat-grid-tile colspan="3" class="property">Beschreibung Standort</mat-grid-tile>
-  <mat-grid-tile colspan="2" class="key">Aufnahmezeitpunkt</mat-grid-tile>
-  <mat-grid-tile colspan="3" class="property">14:32 14.3.2024 </mat-grid-tile>
+  <mat-grid-tile colspan="3" class="property">{{incident?.location?.description?.street}}</mat-grid-tile>
+  <mat-grid-tile colspan="2" rowspan="2" class="key">Zusätzliche Standortinformationen</mat-grid-tile>
+  <mat-grid-tile colspan="3" rowspan="2" class="property">{{incident?.location?.description?.additionalInformation}}</mat-grid-tile>
+  <mat-grid-tile colspan="2" class="key">Dispatch Status</mat-grid-tile>
+  <mat-grid-tile colspan="3" class="property">{{incident?.status}}</mat-grid-tile>
 </mat-grid-list>
 
-<h3>Klassifizierung: Atemnot</h3>
+<h3>Klassifizierung: {{incident?.categorization?.code}}</h3>
 
 <h4>Personen</h4>
 
@@ -28,15 +30,10 @@
   <mat-grid-tile colspan="2" class="key-normal">Männlich</mat-grid-tile>
   <mat-grid-tile colspan="2" class="property">20</mat-grid-tile>
   <mat-grid-tile colspan="6" class="incident-property" style="background-color: lightgrey;"><i>Betroffene</i></mat-grid-tile>
-  <mat-grid-tile colspan="2" class="key-normal">Max Mustermann</mat-grid-tile>
-  <mat-grid-tile colspan="2" class="key-normal">Männlich</mat-grid-tile>
-  <mat-grid-tile colspan="2" class="property">20</mat-grid-tile>
-  <mat-grid-tile colspan="2" class="key-normal">Max Mustermann</mat-grid-tile>
-  <mat-grid-tile colspan="2" class="key-normal">Männlich</mat-grid-tile>
-  <mat-grid-tile colspan="2" class="property">20</mat-grid-tile>
-  <mat-grid-tile colspan="2" class="key-normal">Max Mustermann</mat-grid-tile>
-  <mat-grid-tile colspan="2" class="key-normal">Männlich</mat-grid-tile>
-  <mat-grid-tile colspan="2" class="property">20</mat-grid-tile>
+  <ng-container *ngFor="let patient of incident?.patients"> 
+    <mat-grid-tile colspan="3" class="key-normal">{{patient.sex}}</mat-grid-tile>
+    <mat-grid-tile colspan="3" class="property">{{patient.age}}</mat-grid-tile>
+  </ng-container>
 
 </mat-grid-list>
 
