--- a/dashboard/src/app/dispatcher/dispatcher.component.html
+++ b/dashboard/src/app/dispatcher/dispatcher.component.html
@@ -34,7 +34,7 @@
           <td mat-cell *matCellDef="let element"> {{element.categorization.code}} </td>
         </ng-container>
 
-        <tr mat-row (click)="selectIncident(row)" [ngClass]="{'selected-incident': row == selectedIncident}"
+        <tr mat-row (click)="selectIncident(row)" [ngClass]="{'selected-incident': row.id == selectedIncident}"
           *matRowDef="let row; columns: displayedColumnsIncidents;"></tr>
       </table>
     </div>
@@ -42,11 +42,35 @@
       <p>Ausgewählter Einsatz</p>
     </div>
     <div class="section-vert-2 scrollsection" *ngIf="selectedIncident !== null">
-      <mat-grid-list cols="5" rowHeight="3:1">
+      <mat-grid-list cols="5" rowHeight="50px">
         <mat-grid-tile colspan="2" class="incident-key">Dispatch Status</mat-grid-tile>
-        <mat-grid-tile colspan="3" class="incident-property">Dispatched</mat-grid-tile>
+        <mat-grid-tile colspan="3" class="incident-property">{{selectedIncidentData?.status}}</mat-grid-tile>
         <mat-grid-tile colspan="2" class="incident-key">Klassifikation</mat-grid-tile>
-        <mat-grid-tile colspan="3" class="incident-property">Atemnot</mat-grid-tile>
+        <mat-grid-tile colspan="3" class="incident-property">{{selectedIncidentData?.categorization?.code}}</mat-grid-tile>
+      </mat-grid-list>
+      <br>
+      <mat-grid-list cols="5" rowHeight="50px">
+        <mat-grid-tile colspan="5" class="incident-property" style="background-color: lightgrey;"><i>Standort</i></mat-grid-tile>
+        <mat-grid-tile colspan="2" class="incident-key">PLZ</mat-grid-tile>
+        <mat-grid-tile colspan="3" class="incident-property">{{selectedIncidentData?.location?.description?.postalCode}}</mat-grid-tile>
+        <mat-grid-tile colspan="2" class="incident-key">Ort</mat-grid-tile>
+        <mat-grid-tile colspan="3" class="incident-property">{{selectedIncidentData?.location?.description?.city}}</mat-grid-tile>
+        <mat-grid-tile colspan="2" class="incident-key">Straße</mat-grid-tile>
+        <mat-grid-tile colspan="3" class="incident-property">{{selectedIncidentData?.location?.description?.street}}</mat-grid-tile>
+        <mat-grid-tile colspan="2" rowspan="2" class="incident-key">Zusätzliche Standortinformationen</mat-grid-tile>
+        <mat-grid-tile colspan="3" rowspan="2" class="incident-property">{{selectedIncidentData?.location?.description?.additionalInformation}}</mat-grid-tile>
+      </mat-grid-list>
+      <br>
+      <mat-grid-list cols="6" rowHeight="50px">
+        <mat-grid-tile colspan="6" class="incident-property" style="background-color: lightgrey;"><i>AnruferIn</i></mat-grid-tile>
+        <mat-grid-tile colspan="2" class="key-normal">Max Mustermann</mat-grid-tile>
+        <mat-grid-tile colspan="2" class="key-normal">Männlich</mat-grid-tile>
+        <mat-grid-tile colspan="2" class="property">20</mat-grid-tile>
+        <mat-grid-tile colspan="6" class="incident-property" style="background-color: lightgrey;"><i>Betroffene ({{selectedIncidentData?.numberOfPatients}})</i>  </mat-grid-tile>
+        <ng-container *ngFor="let patient of selectedIncidentData?.patients"> 
+          <mat-grid-tile colspan="3" class="key-normal">{{patient.sex}}</mat-grid-tile>
+          <mat-grid-tile colspan="3" class="property">{{patient.age}}</mat-grid-tile>
+        </ng-container>
       </mat-grid-list>
     </div>
   </div>
@@ -112,7 +136,7 @@
               </td>
             </ng-container>
 
-            <tr mat-row *matRowDef="let row; columns: displayedColumnsResources;" [ngClass]="{'hidden': !showDispatched && row.assigned}"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumnsResources;" [ngClass]="{'hidden': !showDispatched && row.assignedIncident}"></tr>
           </table>
         </div>
 
@@ -135,9 +159,9 @@
 
             <ng-container matColumnDef="status">
               <th mat-header-cell *matHeaderCellDef> Status </th>
-              <td mat-cell *matCellDef="let element"> <mat-icon *ngIf="element.assigned" class="notcheck"
+              <td mat-cell *matCellDef="let element"> <mat-icon *ngIf="element.assignedIncident" class="notcheck"
                 fontIcon="crisis_alert"></mat-icon>
-              <mat-icon *ngIf="!element.assigned" class="check" fontIcon="house"></mat-icon>
+              <mat-icon *ngIf="!element.assignedIncident" class="check" fontIcon="house"></mat-icon>
             </td>
             </ng-container>
 
@@ -164,7 +188,7 @@
               </td>
             </ng-container>
 
-            <tr mat-row *matRowDef="let row; columns: displayedColumnsResourcesAdditional;" [ngClass]="{'hidden': !showDispatched && row.assigned}"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumnsResourcesAdditional;" [ngClass]="{'hidden': !showDispatched && row.assignedIncident}"></tr>
           </table>
         </div>
 
