--- a/dashboard/src/styles.css
+++ b/dashboard/src/styles.css
@@ -2,3 +2,18 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.alert-red{
+    --mdc-snackbar-container-color: red;
+    --mat-mdc-snack-bar-button-color: #fff;
+    --mdc-snackbar-supporting-text-color: white;
+  }
+.alert-default{
+    --mdc-snackbar-container-color: black;
+    --mat-mdc-snack-bar-button-color: #fff;
+    --mdc-snackbar-supporting-text-color: white;
+  }
+  .alert-red button {
+    color: white !important;
+    background-color: #4758B8 !important;
+  }
