--- a/dashboard/src/app/dispatcher/dispatcher.component.html
+++ b/dashboard/src/app/dispatcher/dispatcher.component.html
@@ -67,7 +67,7 @@
         <mat-grid-tile colspan="2" class="key-normal">Männlich</mat-grid-tile>
         <mat-grid-tile colspan="2" class="property">20</mat-grid-tile>
         <mat-grid-tile colspan="6" class="incident-property" style="background-color: lightgrey;"><i>Betroffene ({{selectedIncidentData?.numberOfPatients}})</i>  </mat-grid-tile>
-        <ng-container *ngFor="let patient of selectedIncidentData?.patients"> 
+        <ng-container *ngFor="let patient of selectedIncidentData?.patients">
           <mat-grid-tile colspan="3" class="key-normal">{{patient.sex}}</mat-grid-tile>
           <mat-grid-tile colspan="3" class="property">{{patient.age}}</mat-grid-tile>
         </ng-container>
@@ -85,7 +85,7 @@
     [disabled]="selectedIncident === null" aria-label="Einsatz dispatchen">
     Dispatch
   </button>
-   
+
     <mat-tab-group class="resource-tabs">
       <mat-tab label="Standard">
         <div class="section-vert-3 scrollsection">
@@ -95,6 +95,11 @@
             <ng-container matColumnDef="location">
               <th mat-header-cell *matHeaderCellDef> Location </th>
               <td mat-cell *matCellDef="let element"> {{element.location}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef> ID </th>
+              <td mat-cell *matCellDef="let element"> {{element.id}} </td>
             </ng-container>
 
             <ng-container matColumnDef="type">
